started adding data to the weather cards

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
   </div>
   <hr class="divider">
-  <div>
+  <!-- <div>
   <ul id="button-list">
     <button class="city-button" aria-setsize="4" aria-posinset="1">Austin</button>
     <button class="city-button" aria-setsize="4" aria-posinset="2">Chicago</button>
@@ -49,15 +49,47 @@
     <button class="city-button" aria-setsize="4" aria-posinset="4">Atlanta</button>
 </ul>
 </button>
-</div>
+</div> -->
+
+<!-- Make sure it is storing previous searches here -->
 
 <h1>5-Day Forecast</h1>
 <div class="container">
-  <div id="1" class="day">
-    <div class="date">03/31/2021</div>
-    <div class="temperature">73.72 F</div>
-    <div class="wind">9.53 MPH</div>
-    <div class="humidity">66%</div>
+  <div id="card-0" class="day">
+    <div class="date-0"></div>
+    <div class="temperature-0"></div>
+    <div class="wind-0"></div>
+    <div class="humidity-0"></div>
+  </div>
+  <div id="card-1" class="day">
+    <div class="date"></div>
+    <div class="temperature"></div>
+    <div class="wind"></div>
+    <div class="humidity"></div>
+  </div>
+  <div id="card-2" class="day">
+    <div class="date"></div>
+    <div class="temperature"></div>
+    <div class="wind"></div>
+    <div class="humidity"></div>
+  </div>
+  <div id="card-3" class="day">
+    <div class="date"></div>
+    <div class="temperature"></div>
+    <div class="wind"></div>
+    <div class="humidity"></div>
+  </div>
+  <div id="card-4" class="day">
+    <div class="date"></div>
+    <div class="temperature"></div>
+    <div class="wind"></div>
+    <div class="humidity"></div>
+  </div>
+  <div id="card-5" class="day">
+    <div class="date"></div>
+    <div class="temperature"></div>
+    <div class="wind"></div>
+    <div class="humidity"></div>
   </div>
 </div>
 
