made all the weather info show on the page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   
       <form class="d-flex" role="search">
         <input
-
+          name="city-input"
           type="search"
           placeholder="San Diego"
           aria-label="Search"
@@ -62,34 +62,34 @@
     <div class="humidity-0"></div>
   </div>
   <div id="card-1" class="day">
-    <div class="date"></div>
-    <div class="temperature"></div>
-    <div class="wind"></div>
-    <div class="humidity"></div>
+    <div id="date-1"></div>
+    <div id="temperature-1"></div>
+    <div id="wind-1"></div>
+    <div id="humidity-1"></div>
   </div>
   <div id="card-2" class="day">
-    <div class="date"></div>
-    <div class="temperature"></div>
-    <div class="wind"></div>
-    <div class="humidity"></div>
+    <div id="date-2"></div>
+    <div id="temperature-2"></div>
+    <div id="wind-2"></div>
+    <div id="humidity-2"></div>
   </div>
   <div id="card-3" class="day">
-    <div class="date"></div>
-    <div class="temperature"></div>
-    <div class="wind"></div>
-    <div class="humidity"></div>
+    <div id="date-3"></div>
+    <div id="temperature-3"></div>
+    <div id="wind-3"></div>
+    <div id="humidity-3"></div>
   </div>
   <div id="card-4" class="day">
-    <div class="date"></div>
-    <div class="temperature"></div>
-    <div class="wind"></div>
-    <div class="humidity"></div>
+    <div id="date-4"></div>
+    <div id="temperature-4"></div>
+    <div id="wind-4"></div>
+    <div id="humidity-4"></div>
   </div>
   <div id="card-5" class="day">
-    <div class="date"></div>
-    <div class="temperature"></div>
-    <div class="wind"></div>
-    <div class="humidity"></div>
+    <div id="date-5"></div>
+    <div id="temperature-5"></div>
+    <div id="wind-5"></div>
+    <div id="humidity-5"></div>
   </div>
 </div>
 
