created local storage for cities that were searched. also created a better layout for how the overall page looks

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h1>Weather Dashboard</h1>
       <h2>Search for a City:</h2>
     </div>
-  
+  <div>
       <form class="d-flex" role="search">
         <input
           name="city-input"
@@ -35,6 +35,18 @@
         </button>
       </form>
     </div>
+    <ul id="button-list">
+
+    </ul>
+  </div>
+  <h1 id="current-city"></h1>
+  <div id="card-0" class="current-day">
+    <div class="date-0"></div>
+   <link class="icon-0" rel="stylesheet">
+    <div class="temperature-0"></div>
+    <div class="wind-0"></div>
+    <div class="humidity-0"></div>
+    <div class="uv-index-0"></div>
   </div>
   <hr class="divider">
   <!-- <div>
@@ -55,42 +67,43 @@
 
 <h1>5-Day Forecast</h1>
 <div class="container">
-  <div id="card-0" class="day">
-    <div class="date-0"></div>
-    <div class="temperature-0"></div>
-    <div class="wind-0"></div>
-    <div class="humidity-0"></div>
-  </div>
+  <div class="forecast">
   <div id="card-1" class="day">
     <div id="date-1"></div>
+    <div class="icon-1"></div>
     <div id="temperature-1"></div>
     <div id="wind-1"></div>
     <div id="humidity-1"></div>
   </div>
   <div id="card-2" class="day">
     <div id="date-2"></div>
+    <div class="icon-2"></div>
     <div id="temperature-2"></div>
     <div id="wind-2"></div>
     <div id="humidity-2"></div>
   </div>
   <div id="card-3" class="day">
     <div id="date-3"></div>
+    <div class="icon-3"></div>
     <div id="temperature-3"></div>
     <div id="wind-3"></div>
     <div id="humidity-3"></div>
   </div>
   <div id="card-4" class="day">
     <div id="date-4"></div>
+    <div class="icon-4"></div>
     <div id="temperature-4"></div>
     <div id="wind-4"></div>
     <div id="humidity-4"></div>
   </div>
   <div id="card-5" class="day">
     <div id="date-5"></div>
+    <div class="icon-5"></div>
     <div id="temperature-5"></div>
     <div id="wind-5"></div>
     <div id="humidity-5"></div>
   </div>
+</div>
 </div>
 
   </body>
