created colors for the cards and realigned some text

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div>
       <h1>Weather Dashboard</h1>
-      <h2>Search for a City:</h2>
+      <h3>Search for a City:</h3>
     </div>
   <div>
       <form class="d-flex" role="search">
@@ -35,14 +35,16 @@
         </button>
       </form>
     </div>
+   
     <ul id="button-list">
 
     </ul>
+    <h2 id="current-city"></h2>
   </div>
-  <h1 id="current-city"></h1>
+
   <div id="card-0" class="current-day">
-    <div class="date-0"></div>
-   <link class="icon-0" rel="stylesheet">
+    <div id="card-0"class="date-0"></div>
+   <div class="icon-0" rel="stylesheet" ></div>
     <div class="temperature-0"></div>
     <div class="wind-0"></div>
     <div class="humidity-0"></div>
