finished placing the icons for the weather

--- a/index.html
+++ b/index.html
@@ -44,63 +44,50 @@
 
   <div id="card-0" class="current-day">
     <div id="card-0"class="date-0"></div>
-   <div class="icon-0" rel="stylesheet" ></div>
+    <!-- tells where the icon should go -->
+    <img id="icon-0" class="icon" />
     <div class="temperature-0"></div>
     <div class="wind-0"></div>
     <div class="humidity-0"></div>
-    <div class="uv-index-0"></div>
+    <div id="uv-index-0"></div>
   </div>
   <hr class="divider">
-  <!-- <div>
-  <ul id="button-list">
-    <button class="city-button" aria-setsize="4" aria-posinset="1">Austin</button>
-    <button class="city-button" aria-setsize="4" aria-posinset="2">Chicago</button>
-    <button class="city-button" aria-setsize="4" aria-posinset="3">New York</button>
-    <button class="city-button" aria-setsize="4" aria-posinset="4">Orlando</button>
-    <button class="city-button" aria-setsize="4" aria-posinset="4">San Francisco</button>
-    <button class="city-button" aria-setsize="4" aria-posinset="4">Seattle</button>
-    <button class="city-button" aria-setsize="4" aria-posinset="4">Denver</button>
-    <button class="city-button" aria-setsize="4" aria-posinset="4">Atlanta</button>
-</ul>
-</button>
-</div> -->
 
-<!-- Make sure it is storing previous searches here -->
 
-<h1>5-Day Forecast</h1>
+<h3>5-Day Forecast:</h3>
 <div class="container">
   <div class="forecast">
   <div id="card-1" class="day">
     <div id="date-1"></div>
-    <div class="icon-1"></div>
+    <img id="icon-1" class="icon"/>
     <div id="temperature-1"></div>
     <div id="wind-1"></div>
     <div id="humidity-1"></div>
   </div>
   <div id="card-2" class="day">
     <div id="date-2"></div>
-    <div class="icon-2"></div>
+    <img id="icon-2" class="icon"/>
     <div id="temperature-2"></div>
     <div id="wind-2"></div>
     <div id="humidity-2"></div>
   </div>
   <div id="card-3" class="day">
     <div id="date-3"></div>
-    <div class="icon-3"></div>
+    <img id="icon-3" class="icon"/>
     <div id="temperature-3"></div>
     <div id="wind-3"></div>
     <div id="humidity-3"></div>
   </div>
   <div id="card-4" class="day">
     <div id="date-4"></div>
-    <div class="icon-4"></div>
+    <img id="icon-4" class="icon"/>
     <div id="temperature-4"></div>
     <div id="wind-4"></div>
     <div id="humidity-4"></div>
   </div>
   <div id="card-5" class="day">
     <div id="date-5"></div>
-    <div class="icon-5"></div>
+    <img id="icon-5" class="icon"/>
     <div id="temperature-5"></div>
     <div id="wind-5"></div>
     <div id="humidity-5"></div>
